--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = php-hprose
-url = https://pecl.php.net//get/hprose-1.6.8.tgz
+url = https://pecl.php.net/get/hprose-1.7.0.tgz
 archives = 
 giturl = 
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -13,7 +14,7 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = false
+autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
